# macrobond-data-api

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
benchmark/: main.py
docs/: make.py  verison.py
macrobond_data_api/: __init__.py
scripts/: lint_tools.py  pdoc.py  test_setup.py
