# pycodestyle

[pycodestyle]
ignore = 
    # E501: line too long (* > 79 characters
    E501,
    # W503: line break before binary operator 
    W503,
    # W291: trailing whitespace
    W291,
    # E203: whitespace before ':'
    E203,
    # multiple statements on one line (def)
    E704,

# pylint

[pylint.FORMAT]
max-line-length = 120
max-branches = 15

[pylint.'MESSAGES CONTROL']
disable =
# TODO: @mb-jp remove 'missing-class-docstring' 'missing-module-docstring' 'missing-function-docstring'
    missing-class-docstring, 
    missing-module-docstring,
    missing-function-docstring,
    too-many-instance-attributes,
    too-many-arguments,
    too-many-locals,
    too-few-public-methods,
    too-many-public-methods,
    trailing-whitespace,
    
    duplicate-code,
    protected-access,
   
    # pylint and mypy do not agree, so signature-differs is mypy responsibility
    signature-differs,
   
    #nice when declaring abstract methods
    multiple-statements,
    invalid-name,

    # black will take care of this for us
    line-too-long,

    # TODO
    W0511,

    # TODO fix all error form this
    W0719,

[metadata]
description_file=README.md
license_files=LICENSE

[options]
install_requires =
    keyring>=24.3.0
    Authlib>=1.2.0
    requests>=2.32.3
    ijson>=3.2.3
    pywin32>=306; os_name=='nt'

[options.extras_require]
extra =
    matplotlib
    statsmodels
    scikit-learn
    pandas
dev =
    mypy==1.11.2
    pylint==3.2.6
    pycodestyle==2.12.1
    pdoc3==0.10.0
    build>=1.1.1
    pytest==8.3.2
    pytest-xdist==3.6.1
    coverage>=7.3.2
    black[jupyter]==24.8.0
    requests[socks]>=2.32.3
    nbconvert==7.16.4
    ipython>=7.34.0
    types-pywin32==306.0.0.20240822
    types-requests==2.32.0.20240712
    types-setuptools==73.0.0.20240822
    filelock==3.15.4
socks =
    requests[socks]>=2.32.3